@@ -1,0 +1,7 @@
+package Schema::Baz;
+
+use base qw(Schema::Abstract);
+use strict;
+use warnings;
+
+1;
