@@ -1,4 +1,5 @@
 0.05
+ - Add tests for constructor.
  - Improve constructor doc.
  - Update Module::Install to 1.21 version.
  - Update copyright years.
